Start where you left functionality added

--- a/.lang/GeneralOptions.pot
+++ b/.lang/GeneralOptions.pot
@@ -555,11 +555,11 @@ msgid "Dbus support"
 msgstr ""
 
 #: GeneralOptions.form:1397
-msgid "Remember last played files."
+msgid "If you close xt7-player while playing a local file,\nxt7 will start just were you left the next time."
 msgstr ""
 
 #: GeneralOptions.form:1399
-msgid "File history"
+msgid "Start were you left"
 msgstr ""
 
 #: GeneralOptions.form:1405
