Fakesplitter doesn't work with some qt styles (like oxygen), cosmetic fix

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,7 +1,6 @@
-* Thu Mar 29 2012 Antonio Orefice <xt7player@gmail.com> 3.0.0
+* Thu Mar 29 2012 Antonio Orefice <xt7player@gmail.com> 3.0.1
 - FIX: Runtime error at start if Excludedirs.txt doesn't exist
-
-* Wed Mar 28 2012 Antonio Orefice <xt7player@gmail.com> 3.0.0
+- * Wed Mar 28 2012 Antonio Orefice <xt7player@gmail.com> 3.0.0
 - FIX:    When saving all forms settings at once, some options were restored to factory defaults
 - FIX:    Use constant icon size in browse tab list
 - Mar 21 2012
