--- a/.lang/MplayerClass.pot
+++ b/.lang/MplayerClass.pot
@@ -23,7 +23,7 @@ msgid "found vaapi output driver on enabled video driver list, disabling all vid
 msgstr ""
 
 #: MplayerClass.class:643
-msgid "found an ff*vdpau dorced codec on enabled video codec list, disabling all video filters by appending -vf-clr"
+msgid "found an ff*vdpau forced codec on enabled video codec list, disabling all video filters by appending -vf-clr"
 msgstr ""
 
 #: MplayerClass.class:649
