Updated italian translation

--- a/.lang/FMain.pot
+++ b/.lang/FMain.pot
@@ -1591,7 +1591,7 @@ msgid "Never mind"
 msgstr ""
 
 #: FMain.class:9330
-msgid "There Was an error saving the playlist:\n"
+msgid "There was an error saving the playlist:\n"
 msgstr ""
 
 #: FMain.class:9332
