--- a/.lang/zzzFake.pot
+++ b/.lang/zzzFake.pot
@@ -27,7 +27,7 @@ msgid "NOW"
 msgstr ""
 
 #: zzzFake.form:150
-msgid "TGCom"
+msgid "Not available"
 msgstr ""
 
 #: zzzFake.form:164
@@ -38,11 +38,11 @@ msgstr ""
 msgid "NEXT"
 msgstr ""
 
-#: zzzFake.form:208
+#: zzzFake.form:209
 msgid "13:50"
 msgstr ""
 
-#: zzzFake.form:218
-msgid "Le Iene"
+#: zzzFake.form:219
+msgid "Not Available"
 msgstr ""
 
